1-1/hello_err1.txt
hello_err1.c: In function ‘main’:
hello_err1.c:13:33: error: expected ‘;’ before ‘}’ token
   13 |         printf("hello, world\n")
      |                                 ^
      |                                 ;
   14 | }
      | ~                                
